--- a/index.html
+++ b/index.html
@@ -29,5 +29,6 @@
         <p>Power Imaging<sup>&copy;</sup> 2025</p>
     </footer>
     <script src="script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 </body>
 </html>
