--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portal Verona</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="load.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -23,6 +24,7 @@
             <label for="fileUpload">Selecione um arquivo:</label><br>
             <input type="file" id="fileUpload" accept=".xlsx, .xls"><br><br>
             <button onclick="uploadExcel()" id="uploadFileButton">Subir</button>
+            <div id="loadanime"><div></div><div></div><div></div><div></div></div>
         </div>
     </fieldset>
     <footer>
