--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
         <p></p>
     </div>
     <fieldset class="upload">
-        <legend>Subir Arquivo</legend>
         <div class="form">
             <label for="fileUpload">Selecione um arquivo:</label><br>
             <input type="file" id="fileUpload" accept=".xlsx, .xls"><br><br>
-            <button onclick="uploadExcel()" id="uploadFileButton">Subir</button>
-            <div id="loadanime"><div></div><div></div><div></div><div></div></div>
+            <div class="loadmaster">
+                <button onclick="uploadExcel()" id="uploadFileButton">Subir Arquivo</button>
+                <div id="loadanime"><div></div><div></div><div></div><div></div></div>
+            </div>
         </div>
     </fieldset>
     <footer>
