--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
     </div>
     <fieldset class="upload">
         <div class="form">
-            <label for="fileUpload">Selecione um arquivo:</label><br>
-            <input type="file" id="fileUpload" accept=".xlsx, .xls"><br><br>
+            <div class="campoupload">
+                <label for="fileUpload">Selecione um arquivo:</label><br>
+                <input type="file" id="fileUpload" accept=".xlsx, .xls"><br>
+            </div>
             <div class="loadmaster">
                 <button onclick="uploadExcel()" id="uploadFileButton">Subir Arquivo</button>
                 <div id="loadanime"><div></div><div></div><div></div><div></div></div>
